--- a/part2/mfe-parent/public/index.html
+++ b/part2/mfe-parent/public/index.html
@@ -29,15 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.9.1/zone.min.js"></script>
+    <script src="https://dya54d5t1w13p.cloudfront.net/main.e5de75951e81146bea1c.js"></script>
+    <script src="https://d3vuvdh040hlfx.cloudfront.net/main.7c11c2a96670315905e0.js"></script>
   </body>
 </html>
