remove hashing from bundle generation

--- a/part2/mfe-parent/public/index.html
+++ b/part2/mfe-parent/public/index.html
@@ -31,7 +31,7 @@
     <div id="root"></div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.9.1/zone.min.js"></script>
-    <script src="https://dya54d5t1w13p.cloudfront.net/main.e5de75951e81146bea1c.js"></script>
-    <script src="https://d3vuvdh040hlfx.cloudfront.net/main.7c11c2a96670315905e0.js"></script>
+    <script src="https://dya54d5t1w13p.cloudfront.net/main.js"></script>
+    <script src="https://d3vuvdh040hlfx.cloudfront.net/main.js"></script>
   </body>
 </html>
