--- a/part3/mfe-parent/public/index.html
+++ b/part3/mfe-parent/public/index.html
@@ -26,6 +26,14 @@
     -->
     <title>React App</title>
   </head>
+  <script>
+      var global = global || window;
+      var Buffer = Buffer || [];
+      var process = process || {
+        env: { DEBUG: undefined },
+        version: [],
+      };
+    </script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
