--- a/part4/mfe-parent/public/index.html
+++ b/part4/mfe-parent/public/index.html
@@ -45,7 +45,7 @@
     <div id="root"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/zone.js/0.9.1/zone.min.js"></script>
-    <script src="https://dya54d5t1w13p.cloudfront.net/main.js"></script>
+    <script src="https://d2mh92d688ruas.cloudfront.net/main.js"></script>
     <script src="https://d3vuvdh040hlfx.cloudfront.net/main.js"></script>
   </body>
 </html>
